Stop ▼ being hidden by Sublime Skinz. Improve Internet Explorer appearance

--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -18,6 +18,7 @@ footer {
 }
 
 main {
+    background: white;
     padding: 0 1em;
 }
 
@@ -200,7 +201,6 @@ textarea {
         position: absolute;
         right: .5em;
         top: 1em;
-        z-index: -1;
     }
 
     select {
@@ -211,7 +211,13 @@ textarea {
         font: inherit;
         height: 2.5em;
         padding: 0 1.5em 0 .5em;
+        position: relative
         vertical-align: top;
+        z-index: 1;
+
+        &::-ms-expand {
+            display: none;
+        }
     }
 }
 
